# drone-onboard

./: .gitignore  CMakeLists.txt  Lock.cpp  Lock.h  Makefile  README.md  brain.py  control.cpp  control.h  control.hpp  main.cpp  swig.py
crosscompile/: crosscompile.cpp  crosscompile.h  main.go
ctypes_spike/: Makefile  __init__.py  spike.py  wrapper.cpp
dji/: DJI_HardDriver.cpp  dji.py  djisdk.i  djisdk_wrap.cxx
dji/includes/: DJI_Camera.h  DJI_Config.h  DJI_Flight.h  DJI_Memory.h  DJI_Type.h  DJI_Version.h
models/: brain.cpp  brain.h  drone.cpp  drone.h  sensors.cpp  sensors.h
spikes/: pointers.cpp
src/: Brain.cpp  Brain.h  Drone.cpp  Drone.h  Guidance.cpp  Sensors.cpp  Sensors.h  main.cpp
src/libcore/: CMakeLists.txt  Drone.cpp  Guidance.cpp
src/libcore/includes/: Brain.h  Guidance.h  Sensors.h
src/libdji/: CMakeLists.txt
ssh-config/: config  id_rsa_pi  id_rsa_pi.pub
